# better-rasterizer

./: CMakeLists.txt  README.md
res/: cube.facet  sphere.facet  sphere1568.facet  spirala.facet
src/: camera.cpp  camera.h  common.h  file.cpp  file.h  graphics.cpp  graphics.h  main.cpp  object.cpp  object.h  rasterizer.cpp  rasterizer.h
